--- a/one-page website/new-1.css
+++ b/one-page website/new-1.css
@@ -72,6 +72,7 @@ section {
     height: 105px;
     max-height: 340px;
     display: block;
+    background-color: aqua;
 }
 .container {
     padding-right: 15px;
@@ -220,13 +221,13 @@ section {
     font-weight: 600;
     color: #8d8e8f;
     padding:2% 1% 2% 7% ;
-    width: 80%;
-    border-top: 1px solid #090b0d;
-    border-right: 2px solid #424549;
-    border-bottom: 2px solid #424549;
-    border-left: 1px solid #090b0d;
-    margin: 10px 1em;
-    border-radius: 7px;
+    width: 90%;
+    border-top: 4px solid #090b0d;
+    border-right: 4px solid #424549;
+    border-bottom: 4px solid #424549;
+    border-left: 4px solid #090b0d;
+    margin: 30px 1em;
+    border-radius: 64px;
     background: #13161b;
     box-shadow: inset 0px 3px 0px 0px rgba(5, 5, 5, 0.15);
     font-family: 'Raleway', sans-serif;
